--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"description": "A simple extention that adds an icon indicating the number of unread rss items in your tiny tiny rss feed and serves as a shortcut to the site",
 	"author": "Jonathan Ketchker",
 	"options_page": "options.html",
-	"browser_action": {
+	"action": {
 		"default_title": "tt-rss status",
 		"default_icon": {
 			"16": "images/icon16.png",
@@ -20,12 +20,11 @@
 		"128": "images/icon128.png"
 	},
 	"background": {
-		"scripts": ["background.js"],
-		"persistent": false
+		"service_worker": "background.js"
 	},
 	"permissions": [
 		"storage", "alarms"
 	],
-	"optional_permissions": [ "http://*/", "https://*/"  ],
-	"manifest_version": 2
+	"host_permissions": [ "http://*/", "https://*/"  ],
+	"manifest_version": 3
 }
